# gnode

./: .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: launch.json
.claude/agents/: software-architect.md  testing-specialist.md
docs/: design-draft.md  plan.md
examples/: datamosh.gnode
frontend/: README.md  biome.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  contexts.ts  graph.ts  index.css  main.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: CompareModal.tsx  ConfigPanel.tsx  GlitchNode.tsx  GraphMenu.tsx  Palette.tsx  Toasts.tsx  Toolbar.tsx
frontend/src/hooks/: useNodes.ts
reference/: README.md  artistic.py  b_vertical.py  glitch.py
src/gnode/: __init__.py  adapters.py  cli.py
src/gnode/core/: __init__.py  cache.py  context.py  engine.py  errors.py  graph.py  image.py  node.py  params.py  ports.py  registry.py  rng.py  scheduler.py  types.py  validation.py
src/gnode/lib/: __init__.py  artistic.py  glitch.py
src/gnode/nodes/: __init__.py  _common.py  color.py  corrupt.py  displace.py  freecode.py  io.py  mask.py  sort.py  texture.py  utility.py
src/gnode/server/: __init__.py  __main__.py  app.py  preview.py  schemas.py  workspace.py
tests/: conftest.py  test_cache_matrix.py  test_datamosh_golden.py  test_engine_core.py  test_engine_properties.py  test_freecode.py  test_nodes_contract.py  test_nodes_reference.py  test_robustness.py  test_serialization.py  test_server_api.py  test_server_evaluate.py  test_server_graphs.py  test_server_images.py  test_smoke.py  test_validation.py
